cmake_minimum_required(VERSION 3.15)
project(technobear)

# add_subdirectory(clds)
add_subdirectory(mmx4)
# add_subdirectory(msw8)
# add_subdirectory(plts)
# add_subdirectory(pmix)
# add_subdirectory(rngs)
# add_subdirectory(shq)
# add_subdirectory(swat)
# add_subdirectory(data)
# add_subdirectory(mtmo)
# add_subdirectory(mtin)
# add_subdirectory(mtot)
# add_subdirectory(mttr)
# add_subdirectory(attn)
# add_subdirectory(vost)

