cmake_minimum_required(VERSION 3.15)
project(technobear)

add_subdirectory(attn)
add_subdirectory(clds)
add_subdirectory(data)
add_subdirectory(mtin)
add_subdirectory(mtot)
add_subdirectory(mtmo)
add_subdirectory(mttr)
add_subdirectory(msw8)
add_subdirectory(mmx4)
add_subdirectory(plts)
add_subdirectory(pmix)
add_subdirectory(rngs)
add_subdirectory(shq)
add_subdirectory(swat)
add_subdirectory(vost)
add_subdirectory(logi)
add_subdirectory(clkd)
add_subdirectory(drum)
add_subdirectory(comp)
add_subdirectory(cart)
add_subdirectory(srvb)
add_subdirectory(harm)
add_subdirectory(omod)
add_subdirectory(dlyd)
add_subdirectory(ldrf)
add_subdirectory(loop)
add_subdirectory(gra4)
add_subdirectory(sfft)
add_subdirectory(sflt)
add_subdirectory(dual)
add_subdirectory(trax)
